RESOLVED FIXED 290020
REGRESSION (292320@main): [ Mac OS WK2 Release ] fast/webgpu/nocrash/fuzz-275228.html is a consistent crash
https://bugs.webkit.org/show_bug.cgi?id=290020
Summary REGRESSION (292320@main): [ Mac OS WK2 Release ] fast/webgpu/nocrash/fuzz-275...
Jay Stfleur
Reported 2025-03-18 18:54:05 PDT
Created attachment 474622 [details] Crash log Description: fast/webgpu/nocrash/fuzz-275228.html test is failing with test expectations to cover failures but regressed on Sonoma+ release after changes on 292320@main Buildbot URL: https://build.webkit.org/#/builders/1230/builds/1992 History: https://results.webkit.org/?suite=layout-tests&test=fast%2Fwebgpu%2Fnocrash%2Ffuzz-275228.html Diff/Image Diff/Crash Log: {"app_name":"com.apple.WebKit.GPU.Development","timestamp":"2025-03-18 16:12:26.00 -0700","app_version":"622+","slice_uuid":"da25ae01-162d-3856-8bce-24c9a30fcbeb","build_version":"622.1.7+","platform":1,"bundleID":"com.apple.WebKit.GPU","share_with_app_devs":0,"is_first_party":1,"bug_type":"309","os_version":"macOS 15.3 (24D60)","roots_installed":0,"name":"com.apple.WebKit.GPU.Development","incident_id":"9302C3A8-C3B4-4C8F-BCE5-1F1F02C4E6F5"} { "uptime" : 13000, "procRole" : "Default", "version" : 2, "userID" : 501, "deployVersion" : 210, "modelCode" : "Macmini8,1", "coalitionID" : 751, "osVersion" : { "train" : "macOS 15.3", "build" : "24D60", "releaseType" : "User" }, "captureTime" : "2025-03-18 16:12:24.1324 -0700", "codeSigningMonitor" : 0, "incident" : "9302C3A8-C3B4-4C8F-BCE5-1F1F02C4E6F5", "pid" : 3785, "cpuType" : "X86-64", "roots_installed" : 0, "bug_type" : "309", "procLaunch" : "2025-03-18 16:12:22.8872 -0700", "procStartAbsTime" : 13534362163231, "procExitAbsTime" : 13535595526415, "procName" : "com.apple.WebKit.GPU.Development", "procPath" : "\/Volumes\/VOLUME\/*\/com.apple.WebKit.GPU.Development", "bundleInfo" : {"CFBundleShortVersionString":"622+","CFBundleVersion":"622.1.7+","CFBundleIdentifier":"com.apple.WebKit.GPU"}, "parentProc" : "launchd", "parentPid" : 1, "coalitionName" : "com.apple.buildbot", "crashReporterKey" : "AF6510A5-FB99-A9A5-4653-573768B7FA9C", "responsiblePid" : 1997, "throttleTimeout" : 10, "codeSigningID" : "com.apple.WebKit.GPU", "codeSigningTeamID" : "", "codeSigningFlags" : 570425349, "codeSigningValidationCategory" : 10, "codeSigningTrustLevel" : 4294967295, "bootSessionUUID" : "828DB296-1AE3-412B-B752-9D9866B9D3E7", "bridgeVersion" : {"build":"22P3051","train":"9.3"}, "sip" : "enabled",
Attachments
Crash log (28.14 KB, application/zip)
2025-03-18 18:54 PDT, Jay Stfleur
no flags
Radar WebKit Bug Importer
Comment 1 2025-03-18 18:54:40 PDT
EWS
Comment 2 2025-03-18 19:12:52 PDT
Test gardening commit 292338@main (05b0306d8a8a): <https://commits.webkit.org/292338@main> Reviewed commits have been landed. Closing PR #42674 and removing active labels.
Mike Wyrzykowski
Comment 3 2025-03-20 16:23:58 PDT
EWS
Comment 4 2025-03-20 21:11:15 PDT
Committed 292460@main (0a1f89979162): <https://commits.webkit.org/292460@main> Reviewed commits have been landed. Closing PR #42772 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.