Unreviewed, partial revert of 292320@main (29155572a7c4) https://bugs.webkit.org/show_bug.cgi?id=290020 rdar://147370228

REGRESSION (292320@main): [ Mac OS WK2 Release ] fast/webgpu/nocrash/fuzz-275228.html  is a consistent crash

Partial revert of change:

    [WebGPU] GPURenderPassEncoder.setBindGroup() shows up in CPU trace samples as significant
    https://bugs.webkit.org/show_bug.cgi?id=289433
    rdar://146605221
    292320@main (29155572a7c4)

Canonical link: https://commits.webkit.org/292460@main